<resources>
    <string name="app_name">PantauKripto</string>
    <string name="title_favorite">Favorite</string>
    <string name="no_data">Data masih kosong!</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="something_error">Opps.. terjadi eror</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">Andrian Maulana</string>
    <string name="gmail">andrianmaulana5612@gmail.com</string>
    <string name="_24h_change_5">24h Change: +5%</string>
    <string name="_24h_low">24h Low</string>
    <string name="_24h_high">24h High</string>
    <string name="sell_price">Harga Jual</string>
    <string name="buy_price">Harga Beli</string>
    <string name="last_price">Harga Terakhir</string>
    <string name="btc">BTC</string>
    <string name="btc_idr">BTC/IDR</string>
    <string name="market_logo">Market Logo</string>
    <string name="cari_koin">Cari koin...</string>
    <string name="beli_rp_90_000_jual_rp_95_000">Beli: Rp 90.000 | Jual: Rp 95.000</string>
    <string name="harga_terakhir_rp_100_000">Harga Terakhir: Rp 100.000</string>
    <string name="favorite">Favorite</string>
</resources>