<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="?attr/colorSurfaceVariant"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageItemLogo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/market_logo"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textBaseCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btc"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textLastPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_terakhir_rp_100_000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textBuySell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beli_rp_90_000_jual_rp_95_000"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
